@@ -34,8 +34,8 @@ release:
 	@$(MAKE) ChangeLog
 	@git commit -a -m "updated ChangeLog"
 	@git push
-	@git tag -a ${PKGNAME}-$(VERSION) -m "Tagged ${PKGNAME}-$(VERSION)"
-	@git push --tags
+	@git tag -a -m "Tagged ${PKGNAME}-$(VERSION)" ${PKGNAME}-$(VERSION)
+	@git push --tags origin
 	@$(MAKE) upload
 	
 upload: archive srpm
